--- a/CompanyRegistration/src/CompanyRegistration.Api/CompanyRegistration.Api.csproj
+++ b/CompanyRegistration/src/CompanyRegistration.Api/CompanyRegistration.Api.csproj
@@ -10,8 +10,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CompanyRegistration.Infra.CrossCutting\CompanyRegistration.Infra.CrossCutting.csproj" />
+    <ProjectReference Include="..\CompanyRegistration.Service\CompanyRegistration.Service.csproj" />
   </ItemGroup>
 
 </Project>
