--- a/CompanyRegistration/src/CompanyRegistration.Api/appsettings.json
+++ b/CompanyRegistration/src/CompanyRegistration.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CompaniesDatabase": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "CompanyRegistration",
+    "CollectionName": "Companies"
+  }
 }
