--- a/CompanyRegistration/src/CompanyRegistration.Service/CompanyRegistration.Service.csproj
+++ b/CompanyRegistration/src/CompanyRegistration.Service/CompanyRegistration.Service.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.15.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CompanyRegistration.Domain\CompanyRegistration.Domain.csproj" />
+    <ProjectReference Include="..\CompanyRegistration.Infra.CrossCutting\CompanyRegistration.Infra.CrossCutting.csproj" />
+  </ItemGroup>
+
 </Project>
